tests/NormalTests/paczka2/big_fuzzy/73982928.err
Error in line 3: A482 S957 73,0
Error in line 20: J0hFTL3RR S957 460,9
Error in line 34: nmTldw S610 32,2
Error in line 26: o2aX A482 97,1
Error in line 23: xaVTx2eus S610 58,9
Error in line 33: J0hFTL3RR S610 17,5
Error in line 37: xaVTx2eus S957 80,2
Error in line 41: A482 S610 93,7
Error in line 36: o2aX S957 75,4
Error in line 49: xaVTx2eus A482 -2,5
Error in line 43: kDsH A309 66,2
Error in line 51: kDsH S957 20,9
Error in line 40: xaVTx2eus A482 76,0
Error in line 67: xaVTx2eus A309 89,1
Error in line 64: kDsH A309 80,9
Error in line 71: kDsH S957 80,1
Error in line 74: J0hFTL3RRWS610W64,5
Error in line 83: xaVTx2eus S957 82,0
Error in line 84: xaVTx2eus A482 83,5
Error in line 73: kDsH S610 50,4
Error in line 91: o2aX A482 59,35
Error in line 87: A482 S610 40,1
Error in line 102: A482 S957 71,3
Error in line 98: o2aX A482 93,8
Error in line 108: kDsH A482 57,2
Error in line 116: o2aX S610 25,2
Error in line 118: o2aX A309 92,1
Error in line 133: kDsH A309 8,9
Error in line 138: kDsH S957 51,8
Error in line 131: VQ0D8mYMd A309 74,4
Error in line 155: xaVTx2eus A309 37,6
Error in line 150: o2aX S610 10,3
Error in line 163: nmTldw A309 45,2
Error in line 172: nmTldw S610 97,6
Error in line 174: nmTldw S957 20,3
Error in line 179: o2aX A309 8,26
Error in line 177: J0hFTL3RR A482 5,1
Error in line 178: nmTldw A309 18,7
Error in line 194: VQ0D8mYMd S957 222,5
Error in line 204: nmTldw A482 90,7
Error in line 224: nmTldw S957 12,0
Error in line 229: nmTldw A309 67,5
Error in line 223: VQ0D8mYMd S610 24,6
Error in line 233: VQ0D8mYMd A482 50,5
Error in line 235: VQ0D8mYMd S610 5,8
Error in line 234: o2aX S957 60,9
Error in line 237: VQ0D8mYMd A309 50,0
Error in line 240: o2aX A309 22,8
